<resources>
    <string name="app_name">librespot-android</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="loggedIn">Logged in!</string>
    <string name="failedLoggingIn">Failed logging in!</string>
    <string name="playbackStarted">Playback started!</string>
    <string name="failedStartingPlayback">Failed starting playback!</string>
    <string name="logout">Logout</string>
    <string name="playerReady">Player is ready!</string>
    <string name="somethingWentWrong">Something went wrong!</string>
    <string name="playUri">Spotify URI to play</string>
    <string name="play">Play</string>
    <string name="resume">Resume</string>
    <string name="pause">Pause</string>
    <string name="resumed">Resumed!</string>
    <string name="paused">Paused!</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="skippedNext">Skipped to next!</string>
    <string name="skippedPrev">Skipped to previous!</string>
</resources>